# canvas-download

./: .gitignore  README.md  canvas_download.py  pyproject.toml  requirements.txt
src/canvas_download/: __init__.py  canvas_download.py
